--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "codepath",
-  "displayName": "Israel Abazie",
-  "description": "Interactive code visualization for easier navigation and understanding.",
-  "version": "0.1.0",
+  "displayName": "Codepath",
+  "description": "Visualize and navigate your codebase with an interactive graph. Currently supports Java, with plans for more languages.",
+  "version": "0.1.1",
   "publisher": "Israelabazie",
   "mocha": {
     "loader": "ts-node/esm"
